# actix-web-codegen-const-routes

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md
.github/workflows/: clippy-fmt.yml  coverage.yml  linux.yml
src/: lib.rs  route.rs
tests/: test_macro.rs
tests/trybuild/: docstring-ok.rs  route-custom-lowercase.rs  route-custom-method.rs  route-duplicate-method-fail.rs  route-malformed-path-fail.rs  route-missing-method-fail.rs  route-ok.rs  route-unexpected-method-fail.rs  routes-missing-args-fail.rs  routes-missing-method-fail.rs  routes-ok.rs  simple-fail.rs  simple-fail.stderr  simple.rs
