[package]
name = "actix-web-codegen-const-routes"
version = "0.1.0"
description = "Routing and runtime macros for Actix Web with support for const routes"
repository = "https://git.batsense.net/realaravinth/actix-web-codegen-const-routes"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
    "Aravinth Manivannan <realaravinth@batsense.net>",
]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
actix-router = "0.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
actix-macros = "0.2.4"
actix-rt = "2.2"
actix-test = "0.1"
actix-utils = "3"
actix-web = "4"

futures-core = { version = "0.3.17", default-features = false, features = ["alloc"] }
trybuild = "1"
rustversion = "1"
